mostly internal optimizations, code (remove deprecated methods, etc)